--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,8 @@ body {
 #search-history-container{
     display:flex;
     flex-direction: column;
+    /* height: calc(100vh); */
+    /* width: 20vw; */
 }
 
 #new-city-search-container{
@@ -48,11 +50,16 @@ body {
     justify-content: center;
 }
 
-#forecasted-weather-container {
-    display: flex;
+#weather-info-container{
+    width:80vw;
 }
 
 #current-weather-container{
+    display: flex;
+    
+}
+
+#forecasted-weather-container {
     display: flex;
 }
 
