--- a/assets/style.css
+++ b/assets/style.css
@@ -117,6 +117,11 @@ body {
     flex-grow: 1;
 }
 
+#uv-index{
+    border-radius: 5px;
+    padding: 0.2rem;
+}
+
 #forecasted-weather-container {
     display: flex;
     justify-content: space-evenly;
